; ModuleID = '/home/carl/AnghaBench/linux/drivers/nfc/st-nci/extr_vendor_cmds.c_st_nci_hci_dm_fwupd_start.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nfc/st-nci/extr_vendor_cmds.c_st_nci_hci_dm_fwupd_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfc_dev = type { i32 }
%struct.nci_dev = type { i32 }

@ST_NCI_DEVICE_MGNT_GATE = common dso_local global i32 0, align 4
@ST_NCI_HCI_DM_FWUPD_START = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nfc_dev*, i8*, i64)* @st_nci_hci_dm_fwupd_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @st_nci_hci_dm_fwupd_start(%struct.nfc_dev* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.nfc_dev*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.nci_dev*, align 8
  store %struct.nfc_dev* %0, %struct.nfc_dev** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load %struct.nfc_dev*, %struct.nfc_dev** %4, align 8
  %10 = call %struct.nci_dev* @nfc_get_drvdata(%struct.nfc_dev* %9)
  store %struct.nci_dev* %10, %struct.nci_dev** %8, align 8
  %11 = load %struct.nfc_dev*, %struct.nfc_dev** %4, align 8
  %12 = getelementptr inbounds %struct.nfc_dev, %struct.nfc_dev* %11, i32 0, i32 0
  store i32 1, i32* %12, align 4
  %13 = load %struct.nci_dev*, %struct.nci_dev** %8, align 8
  %14 = load i32, i32* @ST_NCI_DEVICE_MGNT_GATE, align 4
  %15 = load i32, i32* @ST_NCI_HCI_DM_FWUPD_START, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = load i64, i64* %6, align 8
  %18 = call i32 @nci_hci_send_cmd(%struct.nci_dev* %13, i32 %14, i32 %15, i8* %16, i64 %17, i32* null)
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %7, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %3
  %22 = load %struct.nfc_dev*, %struct.nfc_dev** %4, align 8
  %23 = getelementptr inbounds %struct.nfc_dev, %struct.nfc_dev* %22, i32 0, i32 0
  store i32 0, i32* %23, align 4
  br label %24

24:                                               ; preds = %21, %3
  %25 = load i32, i32* %7, align 4
  ret i32 %25
}

declare dso_local %struct.nci_dev* @nfc_get_drvdata(%struct.nfc_dev*) #1

declare dso_local i32 @nci_hci_send_cmd(%struct.nci_dev*, i32, i32, i8*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
